k8s/dynamic-secrets/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vso-db-demo
  namespace: demo-new
  labels:
    test: vso-db-demo
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      test: vso-db-demo
  template:
    metadata:
      labels:
        test: vso-db-demo
    spec:
      volumes:
        - name: secrets
          secret:
            secretName: "vso-db-demo"
      containers:
        - name: example
          image: nginx:latest
          volumeMounts:
            - name: secrets
              mountPath: /etc/secrets
              readOnly: true
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "50Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
              httpHeaders:
                - name: X-Custom-Header
                  value: Awesome
            initialDelaySeconds: 3
            periodSeconds: 3
