k8s/dynamic-secrets/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-management-api-ingress
  namespace: demo-new
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: "/drone-management-api(/|$)(.*)"
            backend:
              service:
                name: drone-management-api
                port:
                  number: 8080
          - pathType: ImplementationSpecific
            path: "/q/dev-ui(/|$)(.*)"
            backend:
              service:
                name: drone-management-api
                port:
                  number: 8080

---
apiVersion: v1
kind: Service
metadata:
  namespace: demo-new
  name: drone-management-api
  labels:
    app: drone-management-api
spec:
  ports:
    - port: 8080
      name: http
  type: ClusterIP
  selector:
    app: drone-management-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-new
  name: drone-management-api
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: drone-management-api
  template:
    metadata:
      annotations:
        vault.hashicorp.com/agent-inject: "true"
      labels:
        app: drone-management-api
    spec:
      containers:
        - name: drone-management-api
          image: drone-management-api/drone-management-api:1.0-SNAPSHOT
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
